[package]
name = "v-streaming"
version = "0.1.0"
description = "A high-performance streaming application for Kick, Twitch and other platforms"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "v_streaming"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Media",
    "Win32_System_Com",
] }
image = "0.25"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing-subscriber = "0.3"
# Additional dependencies for profiler, CLI, PDK, and configuration
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
sys-info = "0.9"
num_cpus = "1.16"
gethostname = "0.4"
clap = { version = "4.4", features = ["derive"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]